// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Estimate /> should renders correctly, variants [0] 1`] = `
<div>
  До 08.12.2026
</div>
`;

exports[`<Estimate /> should renders correctly, variants [1] 1`] = `
<div>
  До 15 дек
</div>
`;
